--- a/assignment.ipynb
+++ b/assignment.ipynb
@@ -633,12 +633,10 @@
       "source": [
         "Using principal components (PCs) offers many advantages over using the original data:\n",
         "\n",
-        "-   **Dimensionality Reduction:** PCA reduces the number of features while retaining most of the important information. In high-dimensional data like this email token dataset, you have many features (tokens). Using only the most important PCs significantly reduces the complexity of the model and computation time.\n",
-        "-   **Multicollinearity:** In the original data, many tokens might be highly correlated (multicollinearity). This can cause issues in linear regression, making it difficult to interpret coefficients and leading to unstable models. PCs are orthogonal (uncorrelated), which eliminates multicollinearity in the regression.\n",
-        "-   **Noise Reduction:** Principal components capture the underlying variance in the data. By selecting a subset of PCs that explain a large portion of the variance, you can effectively reduce noise in the data, potentially leading to a more robust model.\n",
-        "-   **Improved Generalization:** Reducing the number of features and addressing multicollinearity can help prevent overfitting, especially when the number of features is large relative to the number of samples. This can lead to better generalization of the model to unseen data (like the test set).\n",
-        "\n",
-        "In summary, using principal components can simplify the model, improve its stability, reduce noise, and potentially lead to better predictive performance in high-dimensional regression problems. While the R-squared values in this specific case were similar between the original data and the PCA-transformed data, in many high-dimensional scenarios, using PCA can provide a notable advantage."
+        "-   **Dimensionality Reduction:** PCA reduces the number of features while retaining most of the important information.\n",
+        "-   **Multicollinearity:** In the original data, many tokens might be highly correlated. PCs are uncorrelated, which eliminates multicollinearity in the regression.\n",
+        "-   **Noise Reduction:** Principal components can capture the underlying variance in the data and effectively reduce noise in the data.\n",
+        "-   **Improved Generalization:** Reducing the number of features and addressing multicollinearity can help prevent overfitting."
       ],
       "metadata": {
         "id": "Su3fH1OXWtqD"
